--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html ng-app="myFirstApp">
   <head>
     <meta charset="utf-8">
+    <script src="angular.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
     <title>Hello Coursera</title>
   </head>
   <body>
-    <<h1>Hello Coursera Students</h1>
+    <<h1>My First Angular App</h1>
+    <div ng-controller="MyFirstController">
+      {{name}}
+    </div>
   </body>
 </html>
