Added logic for message and text box color

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <<h1>My First Angular App</h1>
+    <<h1>All Assignments Home</h1>
     <div ng-controller="MyFirstController">
-      {{name}}
+		<a href="/module1-solution">Click here to go to assignment</a>
     </div>
   </body>
 </html>
