Included app.js instead of minified version for easier review

--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -13,7 +13,7 @@
       .textBoxInfo {border-color:green;}
     </style>
     <script src="angular.min.js" charset="utf-8"></script>
-    <script src="app.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
   </head>
 <body>
    <div class="container" ng-controller="LunchCheckController">
