Added assignment links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <<h1>All Assignments Home</h1>
     <div ng-controller="MyFirstController">
-		<a href="/module1-solution">Click here to go to assignment</a>
+		<a href="/angular-test/module1-solution">Click here to go to Assignment-1</a> <br/>
+	    	<a href="/angular-test/module2-solution">Click here to go to Assignment-2</a>
     </div>
   </body>
 </html>
