--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <<h1>All Assignments Home</h1>
     <div ng-controller="MyFirstController">
 		<a href="/angular-test/module1-solution">Click here to go to Assignment-1</a> <br/>
-	    	<a href="/angular-test/module2-solution">Click here to go to Assignment-2</a>
+	    	<a href="/angular-test/module2-solution">Click here to go to Assignment-2</a><br/>
+			<a href="/angular-test/module3-solution">Click here to go to Assignment-3</a> 
     </div>
   </body>
 </html>
