--- a/module5-solution/index.html
+++ b/module5-solution/index.html
@@ -52,11 +52,11 @@
                   <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs"> Menu</a>
               </li>
               <li>
-                <a href="#">
+                <a ui-sref="public.myinfo">
                   <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> My Info</a>
               </li>
               <li>
-                <a href="#" ui-sref="public.signup">
+                <a ui-sref="public.signup">
                   <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Sign Up</a>
               </li>
               <li id="phone" class="hidden-xs">
@@ -135,6 +135,7 @@
     <script src="src/public/menu-items/menu-items.controller.js"></script>
     <script src="src/public/menu-item/menu-item.component.js"></script>
     <script src="src/public/signup/registration.controller.js"></script>
+      <script src="src/public/myinfo/myinfo.controller.js"></script>
     <!-- ADMIN SITE -->
 
     <!--Application files -->
