--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <<h1>All Assignments Home</h1>
+    <<h1>All Assignments Home Page</h1>
     <div ng-controller="MyFirstController">
-		<a href="/angular-test/module1-solution">Click here to go to Assignment-1</a> <br/>
-	    	<a href="/angular-test/module2-solution">Click here to go to Assignment-2</a><br/>
-			<a href="/angular-test/module3-solution">Click here to go to Assignment-3</a><br/> 
-			<a href="/angular-test/module4-solution">Click here to go to Assignment-4</a> 
+		  <a href="/angular-test/module1-solution">Click here to go to Assignment-1</a> <br/>
+	    <a href="/angular-test/module2-solution">Click here to go to Assignment-2</a><br/>
+			<a href="/angular-test/module3-solution">Click here to go to Assignment-3</a><br/>
+			<a href="/angular-test/module4-solution">Click here to go to Assignment-4</a>
     </div>
   </body>
 </html>
