home index html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	    <a href="/angular-test/module2-solution">Click here to go to Assignment-2</a><br/>
 			<a href="/angular-test/module3-solution">Click here to go to Assignment-3</a><br/>
 			<a href="/angular-test/module4-solution">Click here to go to Assignment-4</a>
+			<a href="/angular-test/module5-solution">Click here to go to Assignment-5</a>
     </div>
   </body>
 </html>
